--- a/src/assets/styles/common/_variables.scss
+++ b/src/assets/styles/common/_variables.scss
@@ -25,10 +25,10 @@ $content-well-max-width: "none"; // Set the max-width of the content well => see
 /*==================================================================================
   FONT
 ==================================================================================*/
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap");
 
-$text__fontname: "Raleway", sans-serif; // Normal 400, Medium 500, Bold 700
-$header__fontname: "Raleway", sans-serif; // Normal 400, Medium 500, Bold 700
+$text__fontname: "Rubik", sans-serif; // 300, Normal 400, Medium 500, Bold 700
+$header__fontname: "Rubik", sans-serif; // 300, Normal 400, Medium 500, Bold 700
 
 /*==================================================================================
   COLORS
@@ -38,11 +38,14 @@ $header__fontname: "Raleway", sans-serif; // Normal 400, Medium 500, Bold 700
 /––––––––––––––––––––––––*/
 $color__main: var(--main_color);
 $color__text: var(--text_color);
-$color__link: var(--link_color);
-$color__link-hover: var(--link_color_hover);
-$color__footerBg: var(--footer-color);
+$color__link: var(--text_color);
+$color__link-hover: var(--text_color);
+$color__footerBg: #f0f3f5;
 $color__bright: #ffffff;
-$color__dark: #353434;
+$color__dark: #000000;
+$color__yellow: #f2e058;
+$color__green: #9acb89;
+$color__grey: #707070;
 
 /*==================================================================================
   BUTTONS
