--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -14,7 +14,7 @@
 @import "components/hamburger";
 @import "components/search-form";
 @import "components/buttons";
-@import "components/nav";
+@import "components/header";
 @import "components/footer";
 
 // Templates
