header and mobile

--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -1,12 +1,18 @@
 .site-header {
   &__inner {
     display: grid;
-    grid-template-columns: 4fr 4fr 3fr;
+    grid-template-columns: 0.4fr 2fr;
+    position: relative;
+
+    @media #{$breakpoint-md-up} {
+      grid-template-columns: 4fr 4fr 3fr;
+    }
   }
   &__block {
     border-right: 2px solid $color__dark;
     border-bottom: 2px solid $color__dark;
     display: flex;
+    z-index: 10;
     align-items: center;
     &:last-of-type {
       border-right: none;
@@ -15,25 +21,61 @@
   &__block__navigation {
     padding: 0 1rem;
     display: flex;
+    z-index: 10;
+    .site-header__logo {
+      z-index: 10;
+    }
     .primary-menu {
-      flex-basis: 100%;
-      align-self: stretch;
-      display: flex;
-      align-items: center;
-
-      > ul {
+      position: absolute;
+      width: 100vw;
+      height: 0vh;
+      top: 142px;
+      left: 0;
+      background-color: $color__bright;
+      z-index: 9;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.5s, height 0.6s;
+      &.showMobile {
+        opacity: 1;
+        pointer-events: all;
+        height: 100vh;
+      }
+      @media #{$breakpoint-md-up} {
         display: flex;
-        justify-content: space-evenly;
-        flex-basis: 100%;
+        position: static;
         align-self: stretch;
+        align-items: center;
+        flex-basis: 100%;
+        width: auto;
+        height: auto;
+        opacity: 1;
+        pointer-events: all;
+      }
+      > ul {
+        padding: 2rem 1.5rem;
+        @media #{$breakpoint-md-up} {
+          display: flex;
+          justify-content: space-evenly;
+          flex-basis: 100%;
+          align-self: stretch;
+          padding: 0;
+        }
         .menu-item {
           display: flex;
-          align-items: center;
+          align-items: stretch;
           position: relative;
           > a {
             font-weight: 500;
+            font-size: 18px;
             padding: 10px 0px;
-            color: $color__grey;
+            color: $color__text;
+            display: inline-flex;
+            align-items: center;
+            @media #{$breakpoint-md-up} {
+              color: $color__grey;
+              font-size: 14px;
+            }
             &::after {
               @include pseudo;
               width: 100%;
@@ -41,6 +83,10 @@
               background: $color__dark;
               bottom: 0px;
               transition: height 0.4s;
+              display: none;
+              @media #{$breakpoint-md-up} {
+                display: inline-block;
+              }
             }
             &:hover {
               text-decoration: none;
@@ -50,11 +96,197 @@
             }
           }
         }
+        // DROPDOWN
+        .menu-item-has-children {
+          @media #{$breakpoint-md-up} {
+            position: relative;
+          }
+          .sub-menu {
+            position: fixed;
+            opacity: 0;
+            top: 213px;
+            left: 0;
+            right: 0;
+            background-color: $color__bright;
+            padding: 20px 1.5rem;
+            z-index: 11;
+            transition: opacity 0.5s;
+            pointer-events: none;
+            @media #{$breakpoint-md-up} {
+              min-width: 450px;
+              top: 100%;
+              position: absolute;
+              z-index: 9;
+              border: 2px solid $color__dark;
+              padding: 10px 20px;
+            }
+            &.mobileActive {
+              opacity: 1;
+              pointer-events: all;
+            }
+            &.active {
+              transition: opacity 0.5s;
+              opacity: 1;
+              pointer-events: all;
+            }
+            .menu-item {
+              > a {
+                padding: 5px 0px;
+                &::after {
+                  display: none;
+                }
+                &:hover {
+                  color: $color__dark;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
 }
 
-.site-header__block__hamburger-block {
+.site-header__block__search {
   display: none;
+  @media #{$breakpoint-md-up} {
+    display: flex;
+  }
+  .woocommerce-product-search {
+    flex-basis: 100%;
+    padding: 0 1rem;
+    position: relative;
+    &::after {
+      @include pseudo;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17.232' height='17.232' viewBox='0 0 17.232 17.232'%3E%3Cg id='Group_7' data-name='Group 7' transform='translate(-1646.61 -58.939)'%3E%3Cpath id='Path_40' data-name='Path 40' d='M1652.814,58.939h.536c.213.03.426.058.639.092a6.431,6.431,0,0,1,4.522,9.823.358.358,0,0,0,.063.542c1.56,1.542,3.118,3.088,4.652,4.655a5.387,5.387,0,0,1,.616.971v.153a1.327,1.327,0,0,1-1,1h-.153a5.574,5.574,0,0,1-.976-.621c-1.227-1.19-2.427-2.407-3.63-3.621-.419-.422-.821-.861-1.223-1.283-.168.1-.255.151-.341.2a6.427,6.427,0,0,1-9.733-4.088c-.08-.356-.121-.721-.18-1.083v-.536a2.946,2.946,0,0,0,.066-.328,6.391,6.391,0,0,1,4.869-5.65C1651.961,59.062,1652.39,59.013,1652.814,58.939ZM1648.8,65.4a4.289,4.289,0,1,0,4.323-4.266A4.287,4.287,0,0,0,1648.8,65.4Z' transform='translate(0 0)'/%3E%3C/g%3E%3C/svg%3E%0A");
+      right: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+    }
+    .search-field {
+      height: 100%;
+      width: 100%;
+      padding: 25px 0px;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      &::placeholder {
+        color: $color__text;
+      }
+    }
+  }
+}
+
+.site-header__block__nav-shop {
+  .site-header__nav-shop {
+    flex-basis: 100%;
+    align-self: stretch;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    @media #{$breakpoint-md-up} {
+      grid-template-columns: repeat(4, 1fr);
+    }
+    > a {
+      border-right: 2px solid $color__dark;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.2s;
+      &:last-of-type {
+        border-right: none;
+      }
+      &:hover {
+        background-color: $color__footerBg;
+      }
+      &.site-header__hamburger-block {
+        display: inline-flex;
+        @media #{$breakpoint-md-up} {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+.site-banner {
+  background-color: $color__dark;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 45px;
+  padding: 15px 1rem;
+  > p {
+    color: $color__bright;
+    font-size: 13px;
+    text-align: center;
+  }
+}
+
+.site-header__mobile {
+  display: flex;
+  position: static;
+  align-self: stretch;
+  align-items: center;
+  flex-basis: 100%;
+  width: auto;
+  height: auto;
+  .backToParent {
+    position: absolute;
+    top: 165px;
+    right: 1.5rem;
+    z-index: 10;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s;
+    &.mobileActive {
+      opacity: 1;
+      pointer-events: all;
+    }
+    @media #{$breakpoint-md-up} {
+      display: none;
+    }
+  }
+  .woocommerce-product-search {
+    @media #{$breakpoint-md-up} {
+      display: none;
+    }
+    background-color: $color__bright;
+    position: absolute;
+    top: 92px;
+    left: 0px;
+    z-index: 10;
+    width: 100vw;
+    height: 0px;
+    border-bottom: 2px solid $color__dark;
+    display: flex;
+    padding: 0 1.5rem;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.6s, height 0.7s;
+    &.showMobile {
+      pointer-events: none;
+      height: 55px;
+      opacity: 1;
+    }
+    &::after {
+      @include pseudo;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17.232' height='17.232' viewBox='0 0 17.232 17.232'%3E%3Cg id='Group_7' data-name='Group 7' transform='translate(-1646.61 -58.939)'%3E%3Cpath id='Path_40' data-name='Path 40' d='M1652.814,58.939h.536c.213.03.426.058.639.092a6.431,6.431,0,0,1,4.522,9.823.358.358,0,0,0,.063.542c1.56,1.542,3.118,3.088,4.652,4.655a5.387,5.387,0,0,1,.616.971v.153a1.327,1.327,0,0,1-1,1h-.153a5.574,5.574,0,0,1-.976-.621c-1.227-1.19-2.427-2.407-3.63-3.621-.419-.422-.821-.861-1.223-1.283-.168.1-.255.151-.341.2a6.427,6.427,0,0,1-9.733-4.088c-.08-.356-.121-.721-.18-1.083v-.536a2.946,2.946,0,0,0,.066-.328,6.391,6.391,0,0,1,4.869-5.65C1651.961,59.062,1652.39,59.013,1652.814,58.939ZM1648.8,65.4a4.289,4.289,0,1,0,4.323-4.266A4.287,4.287,0,0,0,1648.8,65.4Z' transform='translate(0 0)'/%3E%3C/g%3E%3C/svg%3E%0A");
+      right: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+    }
+    .search-field {
+      width: 100%;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      &::placeholder {
+        color: $color__text;
+      }
+    }
+  }
 }
