footer and archive page

--- a/src/assets/styles/common/_variables.scss
+++ b/src/assets/styles/common/_variables.scss
@@ -51,10 +51,10 @@ $color__grey: #707070;
   BUTTONS
 ==================================================================================*/
 
-$button__color: $color__main;
-$button__width: 150px;
-$button__height: 45px;
-$button__radius: 30px;
+$button__color: $color__dark;
+$button__width: 160px;
+$button__height: 51px;
+$button__radius: 3px;
 
 /*==================================================================================
   TYPOGRAPHY
