--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -1,3 +1,128 @@
 footer.site-footer {
-	background-color: $color__footerBg;
+  background-color: $color__footerBg;
+  .site-footer__main-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 60px;
+    padding: 50px 25px 35px;
+    border-bottom: 1px solid #dae0e5;
+    @media #{$breakpoint-md-up} {
+      grid-template-columns: 1.7fr 1fr;
+      padding: 50px 75px 35px;
+    }
+  }
+  .site-footer__currency {
+    margin-bottom: 50px;
+    > p {
+      font-size: 13px;
+      margin-bottom: 1rem;
+    }
+    .chosen-container {
+      max-width: 360px !important;
+      border: 1px solid $color__dark;
+      background: $color__bright !important;
+    }
+    .chosen-container-active.chosen-with-drop .chosen-single {
+      background-image: none !important;
+      background: $color__bright !important;
+    }
+    .chosen-container-single .chosen-single {
+      background-image: none !important;
+      background: $color__bright !important;
+      height: 50px;
+      display: flex;
+      padding: 0px 0px 0px 10px;
+      align-items: center;
+      > div {
+        position: relative;
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        b {
+          position: relative;
+          top: 7px;
+        }
+      }
+    }
+  }
+  .site-footer__menus {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    @media #{$breakpoint-sm-up} {
+      flex-direction: row;
+    }
+    .site-footer__menu {
+      margin-bottom: 40px;
+    }
+    ul {
+      list-style: none;
+      li {
+        margin-bottom: 13px;
+      }
+    }
+  }
+  .site-footer__payments {
+    ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      li {
+        margin-right: 6px;
+        &:last-of-type {
+          margin-right: 0px;
+        }
+      }
+    }
+  }
+  .site-footer__copy {
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 10px 25px;
+    @media #{$breakpoint-md-up} {
+      padding: 10px 75px;
+    }
+    p {
+      font-size: 13px;
+    }
+  }
+  .site-footer__left {
+    order: 2;
+    @media #{$breakpoint-md-up} {
+      order: 1;
+    }
+  }
+  .site-footer__right {
+    order: 1;
+    margin-bottom: 30px;
+    @media #{$breakpoint-md-up} {
+      padding: 30px 0px 0px 20px;
+      margin-bottom: 0px;
+      order: 2;
+    }
+    h3 {
+      margin-bottom: 17px;
+    }
+    > p {
+      margin-bottom: 25px;
+    }
+  }
+  .site-footer__social {
+    ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      li {
+        margin-right: 5px;
+        &:last-of-type {
+          margin-right: 0px;
+        }
+      }
+    }
+  }
 }
