--- a/src/assets/styles/common/_general.scss
+++ b/src/assets/styles/common/_general.scss
@@ -8,6 +8,10 @@ html {
   -webkit-font-smoothing: antialiased;
   font-size: $text__p;
   font-weight: 400;
+  scroll-behavior: smooth;
+}
+body {
+  scroll-behavior: smooth;
 }
 
 /**
