--- a/src/assets/styles/templates/_archive.scss
+++ b/src/assets/styles/templates/_archive.scss
@@ -203,6 +203,7 @@
       .woocommerce-loop-product__title {
         font-size: 14px;
         margin-bottom: 45px;
+        margin-top: 8px;
       }
       .woocommerce-Price-amount.amount {
         font-size: 14px;
@@ -309,6 +310,7 @@
       .woocommerce-loop-product__title {
         font-size: 14px;
         margin-bottom: 45px;
+        margin-top: 8px;
       }
       .woocommerce-Price-amount.amount {
         font-size: 14px;
