--- a/src/assets/styles/templates/_single-product.scss
+++ b/src/assets/styles/templates/_single-product.scss
@@ -234,6 +234,7 @@
         .woocommerce-loop-product__title {
           font-size: 14px;
           margin-bottom: 45px;
+          margin-top: 8px;
         }
         .woocommerce-Price-amount.amount {
           font-size: 14px;
