cart, ajax load attempt, team

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -16,7 +16,10 @@
 @import "components/buttons";
 @import "components/header";
 @import "components/footer";
+@import "components/woocomponents";
 
 // Templates
 @import "templates/archive";
 @import "templates/single-product";
+@import "templates/teams";
+@import "templates/cart";
