--- a/src/assets/styles/common/_variables.scss
+++ b/src/assets/styles/common/_variables.scss
@@ -46,6 +46,7 @@ $color__dark: #000000;
 $color__yellow: #f2e058;
 $color__green: #9acb89;
 $color__grey: #707070;
+$color__error: #f45d5e;
 
 /*==================================================================================
   BUTTONS
