--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -23,3 +23,6 @@
 @import "templates/single-product";
 @import "templates/teams";
 @import "templates/cart";
+@import "templates/checkout";
+@import "templates/account";
+@import "templates/index";
