single page, about

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -26,3 +26,6 @@
 @import "templates/checkout";
 @import "templates/account";
 @import "templates/index";
+@import "templates/single";
+@import "templates/default";
+@import "templates/about";
