--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -29,3 +29,6 @@
 @import "templates/single";
 @import "templates/default";
 @import "templates/about";
+@import "templates/404";
+@import "templates/search";
+@import "templates/order-details";
