--- a/src/assets/styles/templates/_account.scss
+++ b/src/assets/styles/templates/_account.scss
@@ -62,4 +62,95 @@
       }
     }
   }
+  // My account dashboard
+  .fd-myaccount-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    column-gap: 70px;
+    @media #{$breakpoint-md-up} {
+      width: 85%;
+      margin: auto;
+    }
+    .woocommerce-MyAccount-navigation {
+      ul {
+        background-color: $color__footerBg;
+        list-style: none;
+        padding: 30px 20px;
+      }
+      li {
+        margin-bottom: 15px;
+        a {
+          font-weight: 500;
+          color: #707070;
+        }
+        &.is-active {
+          a {
+            color: $color__dark;
+          }
+        }
+        &:last-of-type {
+          margin-top: 70px;
+        }
+      }
+    }
+    .woocommerce-orders-table {
+      width: 100%;
+      border-collapse: collapse;
+      th {
+        text-align: left;
+        padding: 10px;
+        font-size: 14px;
+      }
+      td {
+        border-top: 2px solid $color__dark;
+        text-align: left;
+        padding: 15px 10px;
+      }
+    }
+    .woocommerce-EditAccountForm {
+      > fieldset {
+        border: none;
+        margin-top: 30px;
+        legend {
+          margin-bottom: 5px;
+          font-weight: 500;
+          font-size: 21px;
+        }
+        .woocommerce-form-row {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          margin-bottom: 10px;
+          label {
+            font-size: 14px;
+            font-weight: 500;
+            margin-bottom: 5px;
+          }
+          input {
+            border: 2px solid $color__dark;
+            padding: 10px 5px;
+            width: 280px;
+          }
+        }
+      }
+      .button {
+        background-color: $color__dark;
+        color: $color__bright;
+        text-align: center;
+        border: none;
+        border-radius: 3px;
+        font-weight: 500;
+        margin-bottom: 25px;
+        font-size: 14px;
+        padding: 15px 25px;
+        margin-top: 10px;
+        text-transform: uppercase;
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
