--- a/src/assets/styles/components/_woocomponents.scss
+++ b/src/assets/styles/components/_woocomponents.scss
@@ -1,5 +1,6 @@
 .woocommerce-notices-wrapper {
-  .woocommerce-message {
+  .woocommerce-message,
+  .woocommerce-info {
     padding: 20px 30px;
     border-bottom: 2px solid $color__dark;
     border-top: 2px solid $color__dark;
