--- a/src/assets/styles/templates/_account.scss
+++ b/src/assets/styles/templates/_account.scss
@@ -154,3 +154,111 @@
     }
   }
 }
+
+// LOGIN
+.fd-loginForm__wrapper {
+  text-align: center;
+  position: relative;
+  min-height: 800px;
+  @media #{$breakpoint-md-up} {
+    max-width: 810px;
+    margin: auto;
+  }
+  .switcher {
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    .button {
+      border: 2px solid $color__dark;
+      padding: 20px 25px;
+      font-weight: 500;
+      font-size: 21px;
+      &.active {
+        background-color: $color__dark;
+        color: $color__bright;
+      }
+    }
+  }
+  .single-tab {
+    position: absolute;
+    top: 140px;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.5s;
+    &.active {
+      opacity: 1;
+      pointer-events: all;
+    }
+    h2 {
+      margin-bottom: 40px;
+    }
+    .social-login {
+      margin-bottom: 23px;
+    }
+    .conditional {
+      margin-bottom: 23px;
+      font-weight: 500;
+    }
+    .woocommerce-form-row {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      margin-bottom: 15px;
+      label {
+        font-size: 14px;
+        font-weight: 500;
+        margin-bottom: 5px;
+        text-align: ce;
+      }
+      .password-input {
+        width: 100%;
+      }
+      input {
+        border: 2px solid $color__dark;
+        padding: 20px 5px;
+        width: 100%;
+      }
+    }
+    .form-row {
+      text-align: left;
+      label {
+        display: block;
+        font-size: 16px;
+        margin-bottom: 5px;
+      }
+      .button {
+        border: none;
+        width: 100%;
+        margin: 10px 0px;
+        background-color: $color__dark;
+        color: $color__bright;
+        text-align: center;
+        border: none;
+        border-radius: 3px;
+        font-weight: 500;
+        font-size: 14px;
+        padding: 20px 25px;
+        margin-top: 10px;
+        text-transform: uppercase;
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
+    }
+    .woocommerce-LostPassword {
+      text-align: left;
+    }
+    .woocommerce-privacy-policy-text {
+      text-align: left;
+      font-size: 14px;
+      margin-bottom: 10px;
+      a {
+        font-size: 14px;
+      }
+    }
+  }
+}
