--- a/src/assets/styles/templates/_about.scss
+++ b/src/assets/styles/templates/_about.scss
@@ -6,6 +6,7 @@
     background-size: cover;
     width: 100%;
     height: 100%;
+    min-height: 400px;
   }
   .founder-item {
     border: 2px solid $color__dark;
