--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -3,7 +3,6 @@
     display: grid;
     grid-template-columns: 0.4fr 2fr;
     position: relative;
-
     @media #{$breakpoint-md-up} {
       grid-template-columns: 4fr 4fr 3fr;
     }
@@ -109,7 +108,9 @@
             right: 0;
             background-color: $color__bright;
             padding: 20px 1.5rem;
+            padding-top: 50px;
             z-index: 11;
+            height: 100%;
             transition: opacity 0.5s;
             pointer-events: none;
             @media #{$breakpoint-md-up} {
@@ -266,7 +267,7 @@
     pointer-events: none;
     transition: opacity 0.6s, height 0.7s;
     &.showMobile {
-      pointer-events: none;
+      pointer-events: all;
       height: 55px;
       opacity: 1;
     }
