--- a/src/assets/styles/templates/_single.scss
+++ b/src/assets/styles/templates/_single.scss
@@ -1,10 +1,13 @@
 .single-template__header {
   background-color: $color__footerBg;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   border-bottom: 2px solid $color__dark;
   padding: 30px;
   column-gap: 80px;
+  @media #{$breakpoint-md-up} {
+    grid-template-columns: 1fr 1fr;
+  }
   .single-header-info {
     display: flex;
     flex-direction: column;
@@ -22,7 +25,10 @@
 .single-main {
   padding: 80px 30px;
   display: grid;
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 1fr;
+  @media #{$breakpoint-md-up} {
+    grid-template-columns: 2fr 10fr;
+  }
   column-gap: 25px;
   margin-bottom: 30px;
   @media #{$breakpoint-md-up} {
