--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -21,6 +21,8 @@
 @import "components/footer";
 @import "components/woocomponents";
 @import "components/carousel";
+@import "components/wishList";
+@import "components/nav-filter";
 
 // Templates
 @import "templates/archive";
