--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -117,6 +117,7 @@
               min-width: 450px;
               top: 100%;
               position: absolute;
+              height: auto;
               z-index: 9;
               border: 2px solid $color__dark;
               padding: 10px 20px;
