--- a/src/assets/styles/templates/_single-product.scss
+++ b/src/assets/styles/templates/_single-product.scss
@@ -1,11 +1,15 @@
 .single-product {
   .fd-single-product__container {
     display: grid;
-    grid-template-columns: 0.9fr 1fr;
+    grid-template-columns: 1fr;
     padding: 25px 30px;
     background-color: $color__footerBg;
     border-bottom: 2px solid $color__dark;
     column-gap: 50px;
+    row-gap: 30px;
+    @media #{$breakpoint-md-up} {
+      grid-template-columns: 0.9fr 1fr;
+    }
     .woocommerce-product-gallery {
       justify-self: center;
       background-color: $color__bright;
@@ -140,6 +144,12 @@
           margin-left: 15px;
         }
       }
+      .title {
+        display: none;
+        @media #{$breakpoint-sm-up} {
+          display: inline-block;
+        }
+      }
     }
     .next {
       text-align: right;
@@ -150,19 +160,25 @@
         margin-left: 18px;
       }
       .title {
-        display: inline-block;
         margin-left: 10px;
         margin-right: 15px;
+        display: none;
+        @media #{$breakpoint-sm-up} {
+          display: inline-block;
+        }
       }
     }
     .prev,
     .next {
       a {
         font-weight: 500;
-        padding: 20px 30px;
+        padding: 15px;
         display: inline-block;
         transition: 0.3s;
         width: 100%;
+        @media #{$breakpoint-sm-up} {
+          padding: 20px 30px;
+        }
         &:hover {
           text-decoration: none;
           background-color: $color__footerBg;
@@ -177,8 +193,11 @@
     }
   }
   .fd-single-description {
-    padding: 60px 30px 80px;
+    padding: 60px 0px 30px;
     text-align: center;
+    @media #{$breakpoint-md-up} {
+      padding: 60px 30px 80px;
+    }
     h3 {
       margin-bottom: 20px;
     }
@@ -202,9 +221,9 @@
     .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-
       border-top: 2px solid $color__dark;
       > li {
+        position: relative;
         border: 2px solid $color__dark;
         border-top: none;
         border-left: none;
