--- a/src/assets/styles/templates/_home.scss
+++ b/src/assets/styles/templates/_home.scss
@@ -79,12 +79,45 @@
           padding-top: 10px;
           padding-bottom: 10px;
           margin-top: 10px;
+          &::after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background-image: url("./../images/spinning.gif");
+            z-index: 5;
+            position: absolute;
+            background-color: rgba($color__bright, 0.6);
+            top: 0;
+            left: 0;
+            background-position: center center;
+            z-index: 1000;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s;
+          }
+          &.disabled {
+            pointer-events: none;
+            cursor: not-allowed;
+            &::after {
+              opacity: 1;
+              pointer-events: all;
+            }
+          }
           &:hover {
             text-decoration: underline;
           }
         }
         .added_to_cart {
-          font-size: 13px;
+          position: absolute;
+          top: 50%;
+          padding: 8px;
+          width: 100%;
+          background: $color__dark;
+          color: $color__bright;
+          text-align: center;
+          font-weight: 500;
+          opacity: 1;
+          transition: 0.3s;
         }
         &.outofstock {
           position: relative;
